--- a/app/src/main/res/layout/activity_my_writing.xml
+++ b/app/src/main/res/layout/activity_my_writing.xml
@@ -11,11 +11,25 @@
         android:id="@+id/recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/close_btn"
+        app:layout_constraintTop_toBottomOf="@+id/sub"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+    <TextView
+        android:id="@+id/sub"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="60dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="50dp"
+        android:textColor="@color/white"
+        android:textSize="40dp"
+        android:fontFamily="@font/songmyung_regular"
+        android:text="나의 발자취"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -26,9 +40,10 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="10dp"
         android:text="X"
+        style="?android:attr/borderlessButtonStyle"
         android:textSize="30sp"
         android:id="@+id/close_btn"
+        android:backgroundTint="#00FFFFFF"
         android:background="#00FFFFFF"/>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
