--- a/app/src/main/res/layout/activity_showtext.xml
+++ b/app/src/main/res/layout/activity_showtext.xml
@@ -16,6 +16,8 @@
         android:id="@+id/close_btn"
         app:layout_constraintTop_toTopOf="parent"
         android:background="#00FFFFFF"
+        android:backgroundTint="#00FFFFFF"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_marginTop="10dp"/>
 
         <TextView
