--- a/app/src/main/res/layout/activity_your_writing.xml
+++ b/app/src/main/res/layout/activity_your_writing.xml
@@ -11,12 +11,38 @@
         android:id="@+id/recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/close_btn"
+        app:layout_constraintTop_toBottomOf="@+id/sub"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
+    <TextView
+        android:id="@+id/word"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="30dp"
+        android:textColor="@color/white"
+        android:textSize="70dp"
+        android:fontFamily="@font/songmyung_regular"
+        android:text="#글감"/>
+
+    <TextView
+        android:id="@+id/sub"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/word"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="50dp"
+        android:textColor="@color/white"
+        android:textSize="30dp"
+        android:fontFamily="@font/songmyung_regular"
+        android:text="이런 글도 있어요"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -29,6 +55,8 @@
         android:text="X"
         android:textSize="30sp"
         android:id="@+id/close_btn"
+        style="?android:attr/borderlessButtonStyle"
+        android:backgroundTint="#00FFFFFF"
         android:background="#00FFFFFF"/>
 
 
