--- a/app/src/main/res/layout/activity_your_detail.xml
+++ b/app/src/main/res/layout/activity_your_detail.xml
@@ -4,6 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".YourDetailActivity">
+    tools:context=".Showtext"
+    android:background="@drawable/night">
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="X"
+        android:textSize="20dp"
+        android:id="@+id/close_btn"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="#00FFFFFF"
+        android:layout_marginTop="10dp"/>
+
+    <TextView
+        android:id="@+id/title"
+        android:text="Title"
+        android:textColor="@color/white"
+        android:textSize="40sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/songmyung_regular"
+        android:layout_marginTop="130dp"
+        android:layout_marginLeft="60dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="300dp"
+        android:layout_height="370dp"
+        android:background="#48666666"
+        android:layout_marginTop="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title"/>
+
+    <TextView
+        android:layout_width="270dp"
+        android:layout_height="350dp"
+        app:layout_constraintTop_toTopOf="@+id/view"
+        app:layout_constraintStart_toStartOf="@+id/view"
+        android:layout_margin="10dp"
+        android:text="Content"
+        android:textSize="20sp"
+        android:textColor="#8A8989"
+        />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
