--- a/app/src/main/res/layout/fragment_2.xml
+++ b/app/src/main/res/layout/fragment_2.xml
@@ -9,69 +9,53 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="적음"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/hi_text"
+        android:layout_marginLeft="50dp"
+        android:text="적음"
         android:textColor="@color/white"
-        android:textSize="90sp"
+        android:textSize="80sp"
         android:fontFamily="@font/songmyung_regular"
-        android:layout_marginTop="100dp"/>
+        android:layout_marginTop="90dp"/>
 
     <TextView
         android:id="@+id/hi_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="적음 소개말"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="50dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
-        app:layout_constraintBottom_toTopOf="@+id/sub_text"
-        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/linear1"
+        android:layout_marginTop="10dp"
+        android:text="적음 소개말"
+        android:textSize="35sp"
         android:fontFamily="@font/songmyung_regular"
         android:textColor="#CFCECE"/>
-
-    <TextView
-        android:id="@+id/sub_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="'적음'이 당신을 기다립니다"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/hi_text"
-        app:layout_constraintBottom_toTopOf="@+id/view_place"
-        android:textSize="25sp"
-        android:fontFamily="@font/songmyung_regular"
-        android:textColor="#ACABAB"/>
 
     <View
         android:id="@+id/view_place"
         android:layout_width="300dp"
-        android:layout_height="250dp"
-        android:background="#27FFFFFF"
-        android:layout_marginTop="60dp"
+        android:layout_height="370dp"
+        android:background="#D02D3149"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sub_text"/>
+        app:layout_constraintTop_toBottomOf="@+id/hi_text"
+        android:layout_marginTop="20dp"/>
 
     <TextView
         android:id="@+id/intro_text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:gravity="center_horizontal"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="15dp"
         android:text="'적음'은"
-        android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@+id/sub_text"
+        app:layout_constraintTop_toBottomOf="@+id/hi_text"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/push_time"
+        app:layout_constraintBottom_toTopOf="@+id/linear1"
         android:textColor="@color/white"
-        android:textSize="20sp"
-    />
+        android:textSize="20sp" />
 
     <View
         android:id="@+id/linear1"
@@ -79,12 +63,11 @@
         android:layout_height="2dp"
         android:layout_centerInParent="true"
         android:background="#59FFFFFF"
-        app:layout_constraintTop_toBottomOf="@+id/intro_text1"
+        android:layout_marginTop="140dp"
+        app:layout_constraintTop_toBottomOf="@+id/hi_text"
+        app:layout_constraintBottom_toTopOf="@+id/push_time"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/push_time"/>
-
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/push_time"
@@ -109,7 +92,7 @@
         app:layout_constraintTop_toBottomOf="@+id/push_time"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toTopOf="@+id/intro_text2"/>
 
     <TextView
