--- a/app/src/main/res/layout/activity_search_text.xml
+++ b/app/src/main/res/layout/activity_search_text.xml
@@ -7,6 +7,18 @@
     tools:context=".SearchText"
     android:background="@drawable/background_img">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/sub"
+        android:text="X"
+        android:textSize="30sp"
+        android:id="@+id/close_btn"
+        style="?android:attr/borderlessButtonStyle"
+        android:backgroundTint="#00FFFFFF"
+        android:background="#00FFFFFF"/>
+
     <TextView
         android:id="@+id/searchcontent"
         android:layout_width="wrap_content"
