--- a/app/src/main/res/layout/activity_searchtextshow.xml
+++ b/app/src/main/res/layout/activity_searchtextshow.xml
@@ -12,33 +12,50 @@
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
         android:text="X"
-        android:id="@+id/close_button"
-        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/close_btn"
         android:textSize="25dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="30dp"
+        app:layout_constraintTop_toTopOf="@id/title"
         style="?android:attr/borderlessButtonStyle"
         android:backgroundTint="#00FFFFFF"
-        android:background="#00FFFFFF" />
+        android:background="#00FFFFFF"/>
 
     <TextView
-        android:layout_width="330dp"
-        android:layout_height="500dp"
-        android:background="#58666666"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/title"
+        android:text="Title"
+        android:textColor="@color/white"
+        android:textSize="40sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/songmyung_regular"
+        android:layout_marginTop="130dp"
+        android:layout_marginLeft="60dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="300dp"
+        android:layout_height="370dp"
+        android:background="#48666666"
+        android:layout_marginTop="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title"/>
+
+
+    <TextView
         android:id="@+id/showtext"
-        android:gravity="center"
-        android:textColor="#FFFFFF"
-        android:textSize="20dp"
-        android:scrollbarFadeDuration="0"
-        android:scrollbarAlwaysDrawVerticalTrack="@color/grey1"
-        android:scrollbarThumbVertical="@color/white"
-        android:scrollbarSize="2dp"
-        android:scrollbarStyle="outsideInset"
+        android:layout_width="270dp"
+        android:layout_height="350dp"
+        app:layout_constraintTop_toTopOf="@+id/view"
+        app:layout_constraintStart_toStartOf="@+id/view"
+        android:layout_margin="10dp"
+        android:text="Content"
+        android:textSize="20sp"
+        android:textColor="#8A8989"
         />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
