--- a/app/src/main/res/layout/fragment_3.xml
+++ b/app/src/main/res/layout/fragment_3.xml
@@ -127,12 +127,25 @@
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:text="X"
-        app:layout_constraintBottom_toTopOf="@+id/title"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/title"
+        app:layout_constraintTop_toTopOf="@+id/title"
+        android:layout_marginLeft="110dp"
         style="?android:attr/borderlessButtonStyle"
         android:backgroundTint="#00FFFFFF"
         android:background="#00FFFFFF"/>
 
-
+    <TextView
+        android:id="@+id/out_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="* 뒤로가기 버튼으로 * \n * 나갈 수 있어요 *"
+        android:textAlignment="center"
+        android:layout_marginTop="90dp"
+        android:textSize="12sp"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/intro_text3"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:gravity="center_horizontal" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
